--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
         </div>
         
-        <!-- Pie de página d -->
+        <!-- Pie de página -->
         <footer>
             <!-- Logotipo en el pie de página -->
             <div class="footer-logo">
