Se corrige vínculo del botón de registro

--- a/pages/login.html
+++ b/pages/login.html
@@ -44,7 +44,7 @@
             </form>
             <div class="register-info">
                 <p><span>¿Aún no tienes una cuenta?</span> Has click en el botón de abajo para crear una cuenta.</p>
-                <a href="http://">Crear cuenta</a>
+                <a href="./registro.html">Crear cuenta</a>
             </div>
             
         </section>
