--- a/pages/products.html
+++ b/pages/products.html
@@ -28,7 +28,7 @@
                     <li><a href=".\servicios.html" class="nav-menu-item">Servicios</a></li>
                     <li><a href=".\contact.html" class="nav-menu-item">Contacto</a></li>
                     <li class="submenu">
-                        <img src="img/cart.png" id="img-carrito" />
+                        <i class="fas fa-shopping-cart" id="img-carrito"></i>
                         <div id="carrito">
                           <table id="lista-carrito" class="u-full-width">
                             <thead>
