--- a/pages/registro.html
+++ b/pages/registro.html
@@ -20,36 +20,34 @@
                     <button aria-label="Menú Hamburguesa" class="nav-toggle">
                         <i class="fa fa-bars"></i>
                     </button>
-                    <li><a href="..\index.html" class="nav-menu-item">Inicio</a></li>
-                  <li><a href=".\products.html" class="nav-menu-item">Productos</a></li>
-                  <li><a href=".\servicios.html" class="nav-menu-item">Servicios</a></li>
-                  <li><a href=".\contact.html" class="nav-menu-item">Contacto</a></li>
-                    <li class="submenu">
-                        <i class="fas fa-shopping-cart" id="img-carrito"></i>
-                        <div id="carrito">
-                          <table id="lista-carrito" class="u-full-width">
-                            <thead>
-                              <tr>
-                                <th>Imagen</th>
-                                <th>Nombre</th>
-                                <th>Precio</th>
-                                <th>Cantidad</th>
-                                <th></th>
-                              </tr>
-                            </thead>
-                            <tbody></tbody>
-                          </table>
-                          <p id="total"></p>
+                    <ul class="nav-list" .nav-list_visible>
+                        <li><a href="..\index.html" class="nav-menu-item">Inicio</a></li>
+                        <li><a href=".\products.html" class="nav-menu-item">Productos</a></li>
+                        <li><a href=".\servicios.html" class="nav-menu-item">Servicios</a></li>
+                        <li><a href=".\contact.html" class="nav-menu-item">Contacto</a></li>
+                        <li class="submenu">
+                            <i class="fas fa-shopping-cart" id="img-carrito"></i>
+                            <div id="carrito">
+                                <table id="lista-carrito" class="u-full-width">
+                                    <thead>
+                                        <tr>
+                                            <th>Imagen</th>
+                                            <th>Nombre</th>
+                                            <th>Precio</th>
+                                            <th>Cantidad</th>
+                                            <th></th>
+                                        </tr>
+                                    </thead>
+                                    <tbody></tbody>
+                                </table>
+                                <p id="total"></p>
         
-                          <a href="#" id="vaciar-carrito" class="button u-full-width"
-                            >Vaciar Carrito</a
-                          >
-                          <a href="#" id="finalizar-compra" class="button u-full-width"
-                            >Finalizar Compra</a
-                          >
-                        </div>
-                      </li>
-                      <li><a href=".\login.html" class="nav-menu-item nav-menu-login">Login</a></li>
+                                <a href="#" id="vaciar-carrito" class="button u-full-width">Vaciar Carrito</a>
+                                <a href="#" id="finalizar-compra" class="button u-full-width">Finalizar Compra</a>
+                            </div>
+                        </li>
+                        <li><a href=".\login.html" class="nav-menu-item nav-menu-login">Login</a></li>
+                    </ul>
                 </div>
             </nav>
         </header>
