--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             >
                             </div>
                       </li>
-                      <li><a href=".\login.html" class="nav-menu-item nav-menu-login">Login</a></li>
+                      <li><a href="pages\login.html" class="nav-menu-item nav-menu-login">Login</a></li>
                     </ul>
                 </div>
             </nav>
