--- a/pages/contact.html
+++ b/pages/contact.html
@@ -72,7 +72,7 @@
             </div>
             <div id="select">
                 <label for="select">Como nos conociste?</label>
-                <select name="select">
+                <select name="select" id="select">
                     <option value="" selected disabled>Selecciona una opción</option>
                     <option value="Instagram">Instagram</option>
                     <option value="Facebook">Facebook</option>
@@ -81,7 +81,7 @@
                 </select>
             </div>
             <div class="checkdiv">
-                <input type="checkbox" id="checkbox" name="checkbox" value="second_checkbox" required />
+                <input type="checkbox" id="checkbox" name="checkbox" value="second_checkbox" required placeholder="Terminos y condiciones"/>
                 <p>Acepte los terminos de condiciones</p>
             </div>
             <button id="boton-enviar" type="submit">Enviar</button>
