Se le agrego responsive a la lista de productos

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
             <!-- Información de derechos de autor -->
             <div class="footer">
-                <p>&copy; Marcelo Yaggi. Todos los derechos reservados.</p>
+                <p>&copy; Gutzy3D. Todos los derechos reservados.</p>
             </div>
 
             <!-- Enlace a la cuenta de Instagram -->
