--- a/pages/registro.html
+++ b/pages/registro.html
@@ -95,7 +95,7 @@
             <img src="../assets/logo/logo-amarillo.png" alt="Logo" class="logo">
         </div>
         <div class="footer">
-            <p>&copy; Marcelo Yaggi. Todos los derechos reservados.</p>
+            <p>&copy; Gutzy3D. Todos los derechos reservados.</p>
         </div>
         <div class="footer-social">
             <a href="https://www.instagram.com/gutzy3d"><img src="../assets/images/instagram.png" alt="Instagram"></a>
