--- a/pages/registro.html
+++ b/pages/registro.html
@@ -57,32 +57,29 @@
     <!--Formulario de registro-->
     <section class="register-form">
         <h1>Crear una cuenta</h1>
-        <form id="registerForm" action="https://formsubmit.co/a176c27c60c0458006d3447051e63609" method="POST">
+        <form id="registerForm" action="#" method="POST">
             <div>
-
-                <label for="nombre">Nombre:</label>
-                <input type="text" id="nombre" name="nombre" placeholder="Nombre" required>
+              <label for="nombre">Nombre:</label>
+              <input type="text" id="nombre" name="nombre" placeholder="Nombre" required>
             </div>
             <div>
-                <label for="apellido">Apellido:</label>
-                <input type="text" id="apellido" name="apellido" placeholder="Apellido" required>
+              <label for="apellido">Apellido:</label>
+              <input type="text" id="apellido" name="apellido" placeholder="Apellido" required>
             </div>
             <div>
-                <label for="correo">Correo electrónico:</label>
-                <input type="email" id="email" name="email" placeholder="Correo" required>
+              <label for="correo">Correo electrónico:</label>
+              <input type="email" id="email" name="email" placeholder="Correo" required>
             </div>
             <div>
-                <label for="password">Contraseña:</label>
-                <input type="password" id="password" name="password" placeholder="Contraseña" required>
+              <label for="password">Contraseña:</label>
+              <input type="password" id="password" name="password" placeholder="Contraseña" required>
             </div>
             <div>
-                <label for="confirmPassword">Confirmar contraseña:</label>
-                <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Contraseña" required>
+              <label for="confirmPassword">Confirmar contraseña:</label>
+              <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Contraseña" required>
             </div>
-
             <button id="submit" type="submit">Registrarse</button>
-
-        </form>
+          </form>
         <div class="login-info">
             <p><span>¿Ya tienes una cuenta?</span> Has click en el botón de abajo para acceder:</p>
             <a href="./login.html">Login</a>
