Se agrego a la barra de navegación el registro

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                         <li><a href="pages\products.html" class="nav-menu-item">Productos</a></li>
                         <li><a href="pages\servicios.html" class="nav-menu-item">Servicios</a></li>
                         <li><a href="pages\contact.html" class="nav-menu-item">Contacto</a></li>
+                        <li><a href="pages\registro.html" class="nav-menu-item">Regístrate</a></li>
                         <li class="submenu">
                             <i class="fas fa-shopping-cart" id="img-carrito"></i>
                             <div id="carrito">
