--- a/pages/login.html
+++ b/pages/login.html
@@ -29,6 +29,7 @@
                     <li><a href=".\products.html" class="nav-menu-item">Productos</a></li>
                     <li><a href=".\servicios.html" class="nav-menu-item">Servicios</a></li>
                     <li><a href=".\contact.html" class="nav-menu-item">Contacto</a></li>
+                    <li><a href=".\registro.html" class="nav-menu-item">Regístrate</a></li>
                     <li class="submenu">
                         <i class="fas fa-shopping-cart" id="img-carrito"></i>
                         <div id="carrito">
