--- a/pages/registro.html
+++ b/pages/registro.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="../assets/images/icono.ico">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gutzy3D</title>
     <link rel="stylesheet" href="../css/styles.css">
@@ -24,10 +25,12 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <ul class="nav-list" .nav-list_visible>
+
                     <li><a href="..\index.html" class="nav-menu-item">Inicio</a></li>
                     <li><a href=".\products.html" class="nav-menu-item">Productos</a></li>
                     <li><a href=".\servicios.html" class="nav-menu-item">Servicios</a></li>
                     <li><a href=".\contact.html" class="nav-menu-item">Contacto</a></li>
+                    <li><a href=".\registro.html" class="nav-menu-item">Regístrate</a></li>
                     <li class="submenu">
                         <i class="fas fa-shopping-cart" id="img-carrito"></i>
                         <div id="carrito">
@@ -99,7 +102,8 @@
         </div>
     </footer>
     <!--Enlace externo al script-->
-    <script src="../js/validacionRegistro.js"></script>
+    <script src="../js/index.js"></script>
+    <script src="../js/validacionRegistro.js " type="module"></script>
 </body>
 
 </html>
